--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "Your Github"
+  github           : "hadibudhy"
   gitlab           :
   google_plus      :
   keybase          :
